# rust-zome-template

./: zome.json
code/: .hcbuild  Cargo.toml
code/src/: lib.rs
