[package]
name = "{{ name }}"
version = "0.1.0"
authors = ["{{ author }}"]
edition = "2018"

[dependencies]
serde = "=1.0.100"
serde_json = { version = "=1.0.47", features = ["preserve_order"] }
serde_derive = "=1.0.100"
hdk = "={{ version }}"
holochain_wasm_utils = "={{ version }}"
holochain_json_derive = "=0.0.1-alpha2"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
