[package]
name = "{{ name }}"
version = "0.1.0"
authors = ["{{ author }}"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_derive = "1.0"
hdk = "={{ version }}"
holochain_wasm_utils = "={{ version }}"
holochain_json_derive = "0.0"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
